dark mode body color,height fixed

--- a/html/assets/css/main.css
+++ b/html/assets/css/main.css
@@ -23,6 +23,7 @@ html, body{
     /* background-color: #41295a; */
     background-color: #141835;
     font-family: hind, sans-serif;
+    min-width: 100vh;
 }
 
 ul{
